--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 POSTGRES_DB_local=test_case_db
 POSTGRES_USER_local=postgres
 POSTGRES_PASSWORD_local=Kohkau11999
-DB_HOST_local=localhost
+DB_HOST_local=postgres
 DB_PORT_local=5432
 SECRET_KEY=Vlz6oF-puEZ41gN_2Qcb8t-puYFoHgF5WnvVpWBodB4
