--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:Kohkau11999@localhost:5432/test_case_db
+sqlalchemy.url = postgresql://postgres:Kohkau11999@postgres:5432/test_case_db
 
 
 [post_write_hooks]
